--- a/Introduction_to_Deep_Learning_Final_Project.ipynb
+++ b/Introduction_to_Deep_Learning_Final_Project.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Introduction To Deep Learning: Final Project\n",
+        "# Introduction to Deep Learning Final Project\n",
         "\n",
         "## Facial Keypoint Detection Through CNN With Data Augmentation\n",
         "\n",
