--- a/Introduction_to_Deep_Learning_Final_Project.ipynb
+++ b/Introduction_to_Deep_Learning_Final_Project.ipynb
@@ -2107,7 +2107,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Analysis:\n",
+        "# Analysis:\n",
         "The random forest appears to consistently produce the same forecasts. This is essentially a null model in which the mean value of each attribute is simply estimated. For facial recognition, this kind of forecast is practically meaningless. For making decisions, the neural network is consequently strongly favoured. While we might attempt to expand the size of the random forest, accuracy is unlikely to converge nearly as quickly as that of the neural network. I would rather improve the neural network through computing time.\n",
         "\n",
         "# Conclusion:\n",
